--- a/src/main/webapp/match/match_detail.xhtml
+++ b/src/main/webapp/match/match_detail.xhtml
@@ -18,8 +18,8 @@
         <h:panelGroup rendered="#{not empty matchDetailView.match}">
             <h2>Match details</h2>
             <p><strong>ID:</strong> #{matchDetailView.match.id}</p>
-            <p><strong>Participant A:</strong> #{matchDetailView.match.participantA.name}</p>
-            <p><strong>Participant B:</strong> #{matchDetailView.match.participantB.name}</p>
+            <p><strong>Participant A:</strong> #{matchDetailView.match.participantAName}</p>
+            <p><strong>Participant B:</strong> #{matchDetailView.match.participantBName}</p>
             <p><strong>Start datetime:</strong> #{matchDetailView.match.startDateTime}</p>
 
             <h3>Tournament Information</h3>
