--- a/src/main/webapp/match/match_edit.xhtml
+++ b/src/main/webapp/match/match_edit.xhtml
@@ -11,27 +11,12 @@
     <ui:define name="content">
         <h:link outcome="/tournament/tournament_list" value="Go back to tournaments" styleClass="btn" />
         <h:form>
-            <header><h2>Add New Match</h2></header>
+            <header><h2>Edit Match</h2></header>
             <h:panelGrid columns="2" cellpadding="5">
-
-                <h:outputLabel for="participantA" value="Participant A:" />
-                <h:inputText id="participantA" value="#{matchEditView.match.participantAName}" required="true" requiredMessage="Participant A name is required">
-                    <f:validateLength minimum="2" maximum="50" />
+                <h:outputLabel for="startDateTime" value="Start DateTime [dd-MM-yyyy HH:mm]:" />
+                <h:inputText id="startDateTime" value="#{matchEditView.match.date}" required="true" >
+                    <f:converter converterId="localDateTimeConverter" />
                 </h:inputText>
-
-                <h:outputLabel for="participantB" value="Participant B:" />
-                <h:inputText id="participantB" value="#{matchEditView.match.participantBName}" required="true"  requiredMessage="Participant B name is required">
-                    <f:validateLength minimum="2" maximum="50" />
-                </h:inputText>
-
-                <h:selectOneMenu id="tournament" value="#{matchEditView.match.tournament}" required="true" requiredMessage="Tournament is required"
-                    converter="tournamentConverter">
-                    <f:selectItem itemLabel=" Select tournament " itemValue="#{null}" noSelectionOption="true" />
-                    <f:selectItems value="#{matchEditView.tournaments}" var="tournament"
-                                   itemLabel="#{tournament.name}" itemValue="#{tournament}"
-                                   converter="tournamentConverter"/>
-                </h:selectOneMenu>
-
             </h:panelGrid>
 
             <h:commandButton value="Save Match" action="#{matchEditView.saveMatch}" styleClass="btn" />
