--- a/src/main/webapp/tournament/tournament_detail.xhtml
+++ b/src/main/webapp/tournament/tournament_detail.xhtml
@@ -17,14 +17,11 @@
 
         <h:panelGroup rendered="#{not empty tournamentDetailView.tournament}">
             <h2>Tournament details</h2>
-            <p><strong>ID:</strong> #{tournamentDetailView.tournament.id}</p>
-            <p><strong>Name:</strong> #{tournamentDetailView.tournament.name}</p>
-            <p><strong>Location:</strong> #{tournamentDetailView.tournament.location}</p>
+            <p><strong>ID:</strong> <h:outputText value="#{tournamentDetailView.tournament.id}"/></p>
+            <p><strong>Name:</strong> <h:outputText value="#{tournamentDetailView.tournament.name}"/></p>
+            <p><strong>Location:</strong> <h:outputText value="#{tournamentDetailView.tournament.location}"/></p>
 
             <h3>Matches from this tournament</h3>
-            <h:link outcome="/match/match_add" value="Add new match" styleClass="btn">
-                <f:param name="tournamentId" value="#{tournamentDetailView.tournament.id}" />
-            </h:link>
 
             <h:panelGroup id="matchListPanel">
                 <h:panelGroup rendered="#{empty tournamentDetailView.matches}">
@@ -36,15 +33,11 @@
 
                         <h:column>
                             <f:facet name="header">ID</f:facet>
-                            #{match.id}
+                            <h:outputText value="#{match.id}"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">Participant A</f:facet>
-                            #{empty match.participantA ? 'No participant A' : match.participantA.name}
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">Participant B</f:facet>
-                            #{empty match.participantB ? 'No participant B' : match.participantB.name}
+                            <h:outputText value="#{empty match.participantA ? 'No participant A' : match.participantA.name}"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">Action</f:facet>
@@ -65,9 +58,20 @@
                                 </h:commandButton>
                             </h:form>
 
+                            <f:facet name="footer">
+                                <h:button styleClass="btn" outcome="/match/match_add.xhtml"
+                                          value="New match"/>
+                            </f:facet>
                         </h:column>
 
                     </h:dataTable>
+
+                    <h:column>
+                        <f:facet name="header">Edit tournament</f:facet>
+                        <h:link outcome="tournament_edit.xhtml" value="Edit tournament">
+                            <f:param name="id" value="#{tournamentDetailView.tournament.id}"/>
+                        </h:link>
+                    </h:column>
 
                 </h:panelGroup>
             </h:panelGroup>
