--- a/src/main/webapp/authentication/custom/login.xhtml
+++ b/src/main/webapp/authentication/custom/login.xhtml
@@ -12,7 +12,7 @@
                     <div class="row">
                         <div class="col-4 p-2">
                             <div class="form-outline">
-                                <h:inputText id="username" name="j_username" type="text" class="form-control" value="#{userLogin.login}"/>
+                                <h:inputText id="username" name="j_username" type="text" class="form-control" value="#{userLoginView.login}"/>
                                 <h:outputLabel for="username" styleClass="form-label" value="Name:"/>
                             </div>
                         </div>
@@ -21,7 +21,7 @@
                     <div class="row">
                         <div class="col-4 p-2">
                             <div class="form-outline">
-                                <h:inputSecret id="password" name="j_password" styleClass="form-control" value="#{userLogin.password}"/>
+                                <h:inputSecret id="password" name="j_password" styleClass="form-control" value="#{userLoginView.password}"/>
                                 <h:outputLabel for="password" class="form-label" value="Password:"/>
                             </div>
                         </div>
@@ -29,7 +29,7 @@
 
                     <div class="row">
                         <div class="col-2 p-2 text-center">
-                            <h:commandButton styleClass="btn btn-primary" type="submit" value="Login" action="#{userLogin.loginAction()}"/>
+                            <h:commandButton styleClass="btn btn-primary" type="submit" value="Login" action="#{userLoginView.loginAction()}"/>
                         </div>
                         <div class="col-2 p-2 text-center">
                             <h:commandButton styleClass="btn btn-secondary" type="reset" value="Reset"/>
