--- a/src/main/webapp/match/match_list.xhtml
+++ b/src/main/webapp/match/match_list.xhtml
@@ -16,7 +16,7 @@
                 <h:dataTable value="#{matchListView.matches.matches}" var="match">
                     <h:column>
                         <f:facet name="header">ID</f:facet>
-                        <h:outputText value="#{tournament.id}" />
+                        <h:outputText value="#{match.id}" />
                     </h:column>
                     <h:column>
                         <f:facet name="header">Participant A name: </f:facet>
@@ -26,18 +26,13 @@
                         <f:facet name="header">Tournament name: </f:facet>
                         <h:outputText value="#{match.tournamentName}"/>
                     </h:column>
-
-                    <h:column>
-                        <f:facet name="header">Edit</f:facet>
-                        <h:link outcome="match_edit.xhtml" value="Edit match">
-                            <f:param name="id" value="#{match.id}"/>
-                        </h:link>
-                    </h:column>
-
                     <h:column>
                         <f:facet name="header">Action</f:facet>
                         <h:link outcome="match_detail" value="View details" styleClass="btn">
                             <f:param name="matchId" value="#{match.id}" />
+                        </h:link>
+                        <h:link outcome="match_edit.xhtml" value="Edit match">
+                            <f:param name="id" value="#{match.id}"/>
                         </h:link>
                         <h:form style="display:inline;">
                             <h:commandButton value="Delete" styleClass="btn"
