--- a/src/main/webapp/match/match_list.xhtml
+++ b/src/main/webapp/match/match_list.xhtml
@@ -4,47 +4,48 @@
 <ui:composition template="/WEB-INF/template/main.xhtml">
     <ui:define name="title">Matches</ui:define>
     <ui:define name="content">
-        <h2>Matches</h2>
+        <f:loadBundle var="message" basename="maciej.goralczyk.entities.view.i18n.messages"/>
+        <h2>#{message.matches}</h2>
 
         <h:panelGroup id="matchesListPanel">
 
             <h:panelGroup rendered="#{empty matchListView.matches.matches}">
-                <p>No matches!</p>
+                <p>#{message.noMatches}</p>
             </h:panelGroup>
 
             <h:panelGroup rendered="#{not empty matchListView.matches.matches}">
-                <h:dataTable value="#{matchListView.matches.matches}" var="match">
+                <h:dataTable id="matchesTable" value="#{matchListView.matches.matches}" var="match">
                     <h:column>
-                        <f:facet name="header">ID</f:facet>
+                        <f:facet name="header">#{message.id}</f:facet>
                         <h:outputText value="#{match.id}" />
                     </h:column>
                     <h:column>
-                        <f:facet name="header">Participant A name: </f:facet>
+                        <f:facet name="header">#{message.participantA}: </f:facet>
                         <h:outputText value="#{match.participantAName}"/>
                     </h:column>
                     <h:column>
-                        <f:facet name="header">Tournament name: </f:facet>
+                        <f:facet name="header">#{message.tournament}: </f:facet>
                         <h:outputText value="#{match.tournamentName}"/>
                     </h:column>
                     <h:column>
-                        <f:facet name="header">Action</f:facet>
-                        <h:link outcome="match_detail" value="View details" styleClass="btn">
+                        <f:facet name="header">#{message.action}</f:facet>
+                        <h:link outcome="match_detail" value="#{message.viewDetails}" styleClass="btn">
                             <f:param name="matchId" value="#{match.id}" />
                         </h:link>
-                        <h:link outcome="match_edit.xhtml" value="Edit match">
+                        <h:link outcome="match_edit.xhtml" value="#{message.edit}">
                             <f:param name="id" value="#{match.id}"/>
                         </h:link>
                         <h:form style="display:inline;">
-                            <h:commandButton value="Delete" styleClass="btn"
+                            <h:commandButton value="#{message.delete}" styleClass="btn"
                                              action="#{matchListView.deleteMatch(match.id)}">
-                                <f:ajax execute="@form"/>
+                                <f:ajax execute="@form" render=":matchesTable"/>
                             </h:commandButton>
                         </h:form>
                     </h:column>
 
                     <f:facet name="footer">
                         <h:button styleClass="btn" outcome="match_add.xhtml"
-                                  value="New match"/>
+                                  value="#{message.create}"/>
                     </f:facet>
 
                 </h:dataTable>
