--- a/src/main/webapp/tournament/tournament_detail.xhtml
+++ b/src/main/webapp/tournament/tournament_detail.xhtml
@@ -9,69 +9,62 @@
 
     <ui:define name="title">Tournament - Details</ui:define>
     <ui:define name="content">
-        <h:link outcome="tournament_list" value="Back to tournament list" styleClass="btn" />
+        <f:loadBundle var="message" basename="maciej.goralczyk.entities.view.i18n.messages"/>
+        <h:link outcome="tournament_list" value="#{message.backToTournamentList}" styleClass="btn" />
 
         <h:panelGroup rendered="#{empty tournamentDetailView.tournament}">
-            <p>Tournament not found!</p>
+            <p>#{message.tournamentNotFound}!</p>
         </h:panelGroup>
 
         <h:panelGroup rendered="#{not empty tournamentDetailView.tournament}">
-            <h2>Tournament details</h2>
-            <p><strong>ID:</strong> <h:outputText value="#{tournamentDetailView.tournament.id}"/></p>
-            <p><strong>Name:</strong> <h:outputText value="#{tournamentDetailView.tournament.name}"/></p>
-            <p><strong>Location:</strong> <h:outputText value="#{tournamentDetailView.tournament.location}"/></p>
+            <h2>#{message.tournamentDetails}</h2>
+            <p><strong>#{message.id}:</strong> <h:outputText value="#{tournamentDetailView.tournament.id}"/></p>
+            <p><strong>#{message.name}:</strong> <h:outputText value="#{tournamentDetailView.tournament.name}"/></p>
+            <p><strong>#{message.location}:</strong> <h:outputText value="#{tournamentDetailView.tournament.location}"/></p>
 
-            <h3>Matches from this tournament</h3>
+            <h3>#{message.matches}</h3>
 
             <h:panelGroup id="matchListPanel">
                 <h:panelGroup rendered="#{empty tournamentDetailView.matches}">
-                    <p>No matches found for this tournament</p>
+                    <p>#{message.noMatches}</p>
                 </h:panelGroup>
 
                 <h:panelGroup rendered="#{not empty tournamentDetailView.matches}">
-                    <h:dataTable value="#{tournamentDetailView.matches}" var="match">
+                    <h:dataTable id="matchesTable" value="#{tournamentDetailView.matches}" var="match">
 
                         <h:column>
-                            <f:facet name="header">ID</f:facet>
+                            <f:facet name="header">#{message.id}</f:facet>
                             <h:outputText value="#{match.id}"/>
                         </h:column>
                         <h:column>
-                            <f:facet name="header">Participant A</f:facet>
+                            <f:facet name="header">#{message.participantA}</f:facet>
                             <h:outputText value="#{empty match.participantA ? 'No participant A' : match.participantA.name}"/>
                         </h:column>
                         <h:column>
-                            <f:facet name="header">Action</f:facet>
+                            <f:facet name="header">#{message.action}</f:facet>
 
-                            <h:link outcome="/match/match_detail" value="View" styleClass="btn">
+                            <h:link outcome="/match/match_detail" value="#{message.view}" styleClass="btn">
                                 <f:param name="matchId" value="#{match.id}" />
                             </h:link>
 
-                            <h:link outcome="/match/match_edit" value="Edit" styleClass="btn">
+                            <h:link outcome="/match/match_edit" value="#{message.edit}" styleClass="btn">
                                 <f:param name="matchId" value="#{match.id}" />
                                 <f:param name="tournamentId" value="#{tournamentDetailView.tournament.id}" />
                             </h:link>
 
                             <h:form style="display:inline;">
-                                <h:commandButton value="Delete" styleClass="btn"
+                                <h:commandButton value="#{message.delete}" styleClass="btn"
                                                  action="#{tournamentDetailView.deleteMatch(match.id)}">
-                                    <f:ajax execute="@form"/>
+                                    <f:ajax execute="@form" render=":matchesTable"/>
                                 </h:commandButton>
                             </h:form>
 
                             <f:facet name="footer">
                                 <h:button styleClass="btn" outcome="/match/match_add.xhtml"
-                                          value="New match"/>
+                                          value="#{message.newMatch}"/>
                             </f:facet>
                         </h:column>
-
                     </h:dataTable>
-
-                    <h:column>
-                        <f:facet name="header">Edit tournament</f:facet>
-                        <h:link outcome="tournament_edit.xhtml" value="Edit tournament">
-                            <f:param name="id" value="#{tournamentDetailView.tournament.id}"/>
-                        </h:link>
-                    </h:column>
 
                 </h:panelGroup>
             </h:panelGroup>
