--- a/src/main/webapp/tournament/tournament_list.xhtml
+++ b/src/main/webapp/tournament/tournament_list.xhtml
@@ -4,34 +4,35 @@
 <ui:composition template="/WEB-INF/template/main.xhtml">
     <ui:define name="title">Tournaments</ui:define>
     <ui:define name="content">
-        <h2>Tournaments</h2>
+        <f:loadBundle var="message" basename="maciej.goralczyk.entities.view.i18n.messages"/>
+        <h2>#{message.tournaments}</h2>
 
         <h:panelGroup id="tournamentListPanel">
 
             <h:panelGroup rendered="#{empty tournamentListView.tournaments.tournaments}">
-                <p>No tournaments!</p>
+                <p>#{message.noTournaments}</p>
             </h:panelGroup>
 
             <h:panelGroup rendered="#{not empty tournamentListView.tournaments.tournaments}">
                 <h:dataTable value="#{tournamentListView.tournaments.tournaments}" var="tournament">
                     <h:column>
-                        <f:facet name="header">ID</f:facet>
+                        <f:facet name="header">#{message.id}</f:facet>
                         <h:outputText value="#{tournament.id}" />
                     </h:column>
                     <h:column>
-                        <f:facet name="header">Name</f:facet>
+                        <f:facet name="header">#{message.name}</f:facet>
                         <h:outputText value="#{tournament.name}"/>
                     </h:column>
 
                     <h:column>
-                        <f:facet name="header">Action</f:facet>
-                        <h:link outcome="tournament_detail" value="View details" styleClass="btn">
+                        <f:facet name="header">#{message.action}</f:facet>
+                        <h:link outcome="tournament_detail" value="#{message.viewDetails}" styleClass="btn">
                             <f:param name="tournamentId" value="#{tournament.id}" />
                         </h:link>
                     </h:column>
                     <h:column>
                         <h:form style="display:inline;">
-                            <h:commandButton value="Delete" styleClass="btn"
+                            <h:commandButton value="#{message.delete}" styleClass="btn"
                                              action="#{tournamentListView.deleteTournament(tournament.id)}">
                                 <f:ajax execute="@form"/>
                             </h:commandButton>
@@ -39,14 +40,14 @@
                     </h:column>
                     <h:column>
                         <f:facet name="header">Action</f:facet>
-                        <h:link outcome="tournament_edit" value="Edit" styleClass="btn">
+                        <h:link outcome="tournament_edit" value="#{message.edit}" styleClass="btn">
                             <f:param name="id" value="#{tournament.id}" />
                         </h:link>
                     </h:column>
 
                     <f:facet name="footer">
                         <h:button styleClass="btn" outcome="tournament_create.xhtml"
-                                  value="New tournament"/>
+                                  value="#{message.newTournament}"/>
                     </f:facet>
 
                 </h:dataTable>
