Added localization strings.

--- a/src/main/webapp/authentication/form/login_error.xhtml
+++ b/src/main/webapp/authentication/form/login_error.xhtml
@@ -4,8 +4,9 @@
                 template="/WEB-INF/template/main.xhtml">
 
     <ui:define name="content">
+        <f:loadBundle var="message" basename="maciej.goralczyk.authentication.view.i18n.messages"/>
         <article class="text--justified">
-            <header><h2>Login error</h2></header>
+            <header><h2>#{message.loginError}.</h2></header>
             <section>
 
             </section>
