--- a/src/main/webapp/match/match_edit.xhtml
+++ b/src/main/webapp/match/match_edit.xhtml
@@ -10,7 +10,7 @@
     <ui:define name="title">Edit match</ui:define>
     <ui:define name="content">
         <f:loadBundle var="message" basename="maciej.goralczyk.entities.view.i18n.messages"/>
-        <h:link outcome="/tournament/tournament_list" value="#{message.backToTournaments}" styleClass="btn" />
+        <h:link outcome="/tournament/tournament_list" value="#{message.backToTournamentList}" styleClass="btn" />
         <h:form>
             <header><h2>#{message.editMatchHeader}</h2></header>
             <h:panelGrid columns="2" cellpadding="5">
