Before 7th lab.

--- a/src/main/webapp/authentication/form/login.xhtml
+++ b/src/main/webapp/authentication/form/login.xhtml
@@ -5,7 +5,7 @@
                 template="/WEB-INF/template/main.xhtml">
 
     <ui:define name="content">
-        <f:loadBundle var="message" basename="maciej.goralczyk.authentication.view.i18n.messages"/>
+        <f:loadBundle var="message" basename="goralczyk.maciej.authentication.view.i18n.messages"/>
         <article class="text--justified">
             <header><h2>#{message.loginHeader}</h2></header>
             <section>
