--- a/src/main/webapp/match/match_add.xhtml
+++ b/src/main/webapp/match/match_add.xhtml
@@ -8,7 +8,7 @@
 
     <ui:define name="title">Match creation form</ui:define>
     <ui:define name="content">
-        <f:loadBundle var="message" basename="maciej.goralczyk.entities.view.i18n.messages"/>
+        <f:loadBundle var="message" basename="goralczyk.maciej.entities.view.i18n.messages"/>
         <h:link outcome="/tournament/tournament_list" value="#{message.backToTournaments}" styleClass="btn" />
         <h:form>
             <header><h2>#{message.newMatchHeader}</h2></header>
