--- a/src/main/webapp/match/match_list.xhtml
+++ b/src/main/webapp/match/match_list.xhtml
@@ -4,7 +4,7 @@
 <ui:composition template="/WEB-INF/template/main.xhtml">
     <ui:define name="title">Matches</ui:define>
     <ui:define name="content">
-        <f:loadBundle var="message" basename="maciej.goralczyk.entities.view.i18n.messages"/>
+        <f:loadBundle var="message" basename="goralczyk.maciej.entities.view.i18n.messages"/>
         <h2>#{message.matches}</h2>
 
         <h:panelGroup id="matchesListPanel">
