--- a/src/main/webapp/tournament/tournament_create.xhtml
+++ b/src/main/webapp/tournament/tournament_create.xhtml
@@ -10,7 +10,7 @@
     </f:metadata>
 
     <ui:define name="content">
-        <f:loadBundle var="message" basename="maciej.goralczyk.entities.view.i18n.messages"/>
+        <f:loadBundle var="message" basename="goralczyk.maciej.entities.view.i18n.messages"/>
         <article>
             <header>
                 <h2>#{message.tournamentCreationHeader}</h2>
