--- a/src/main/webapp/tournament/tournament_edit.xhtml
+++ b/src/main/webapp/tournament/tournament_edit.xhtml
@@ -11,7 +11,7 @@
     </f:metadata>
 
     <ui:define name="content">
-        <f:loadBundle var="message" basename="maciej.goralczyk.entities.view.i18n.messages"/>
+        <f:loadBundle var="message" basename="goralczyk.maciej.entities.view.i18n.messages"/>
         <article>
             <header><h2>#{message.editTournamentHeader}</h2></header>
             <h:form styleClass="container" onreset="onReset()" enctype="multipart/form-data">
