--- a/src/main/webapp/user/user_list.xhtml
+++ b/src/main/webapp/user/user_list.xhtml
@@ -6,7 +6,7 @@
                 template="/WEB-INF/template/main.xhtml">
 
     <ui:define name="content">
-        <f:loadBundle var="message" basename="maciej.goralczyk.entities.view.i18n.messages"/>
+        <f:loadBundle var="message" basename="goralczyk.maciej.entities.view.i18n.messages"/>
         <article class="text--justified">
             <header><h2>#{message.users}</h2></header>
 
